--- a/rockPaperScissorApp/style.css
+++ b/rockPaperScissorApp/style.css
@@ -12,7 +12,8 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    height: 100vh;
+    background-attachment: fixed;
+    height: 100%;
 }
 
 h1 {
@@ -28,33 +29,39 @@ form {
     justify-content: center;
 }
 
-.rock, .paper, .scissor {
+.rock, .paper, .scissor, .play, .replay {
     background-color: transparent;
     text-decoration: none;
     border: 3px solid blue;
-    padding: 20px 40px;
+    padding: 20px 80px;
     color: white;
-    margin: 0 20px;
+    margin: 40px 20px;
     border-radius: 20px;
-    margin-top: 80px;
     cursor: pointer;
 }
 
-.rock:hover, .paper:hover, .scissor:hover {
+.replay {
+    width: 60%;
+}
+
+.rock:hover, .paper:hover, .scissor:hover, .play:hover, .replay:hover {
     background-color: rgb(45, 87, 255);
     transition: 0.5s;
     transform: scale(1.2);
 }
 
+.replay:hover {
+    transform: scale(1);
+}
+
 .all-paragraphs {
     color: white;
-    font-size: 30px;
+    font-size: 25px;
 }
 
 .players {
     display: flex;
     justify-content: space-around;
-    margin-top: 80px;
 }
 
 .scores {
@@ -69,4 +76,20 @@ form {
 
 .tie-win-lose {
     margin: 40px 0;
+}
+
+.initial-screen, .replay-div {
+    display: flex;
+    justify-content: center;
+}
+
+.rock:disabled, .paper:disabled, .scissor:disabled {
+    background-color: grey;
+    border: 3px solid lightgrey;
+    transform: scale(1);
+}
+
+.rock:disabled:hover, .paper:disabled:hover, .scissor:disabled:hover {
+    background-color: grey;
+    transform: scale(1);
 }
